--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "formik": "^2.0.7",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
