--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.1",
+    "node": "13.3.0"
+  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.7.2",
@@ -15,13 +19,14 @@
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
+    "react-dev-utils":"^10.0.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
+
     "redux-thunks": "^1.0.0"
   },
   "scripts": {
