--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
-    "react-dev-utils":"^10.0.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-
+    "redux-thunk": "^2.3.0",
     "redux-thunks": "^1.0.0"
   },
   "scripts": {
