--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
     "node": "13.3.0"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.7.2",
-    "@material-ui/pickers": "^3.2.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "formik": "^2.0.7",
     "material-ui": "^0.20.2",
+    "moment": "^2.27.0",
     "react": "^16.12.0",
-   
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
@@ -25,8 +19,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk" :"^2.3.0",
-    "redux-thunks" : "^1.0.0"
+    "redux-thunk": "^2.3.0",
+    "redux-thunks": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
